Fix incorrect code for DOMKey on Android.

Add missing DVR mapping.
Fix Kana mode mapping.

BUG=669647,669650

Change-Id: Id6437ed1dae804108dfcad0dbe36feff04dea4ac
Reviewed-on: https://chromium-review.googlesource.com/919425
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537012}
Former-commit-id: 41a76cf2c07c9a4d00b2e8aeea413ea74850204e