ui/events/keycodes/keyboard_code_conversion_android.cc
@@ -284,7 +284,7 @@ DomKey GetDomKeyFromAndroidKeycode(int keycode) {
     case AKEYCODE_KATAKANA_HIRAGANA:
       return DomKey::HIRAGANA_KATAKANA;
     case AKEYCODE_KANA:
-      return DomKey::KANA_MODE;
+      return DomKey::KANJI_MODE;
     case AKEYCODE_BRIGHTNESS_DOWN:
       return DomKey::BRIGHTNESS_DOWN;
     case AKEYCODE_BRIGHTNESS_UP:
@@ -379,6 +379,8 @@ DomKey GetDomKeyFromAndroidKeycode(int keycode) {
       return DomKey::COPY;
     case AKEYCODE_PASTE:
       return DomKey::PASTE;
+    case AKEYCODE_DVR:
+      return DomKey::DVR;
 
     // The following codes should already be handled as printable
     // character mapping.
@@ -479,7 +481,6 @@ DomKey GetDomKeyFromAndroidKeycode(int keycode) {
     // case AKEYCODE_BUTTON_SELECT:
     // case AKEYCODE_BUTTON_MODE:
     // case AKEYCODE_WINDOW:
-    // case AKEYCODE_DVR:
     // case AKEYCODE_BUTTON_1:
     // case AKEYCODE_BUTTON_2:
     // case AKEYCODE_BUTTON_3:
